# lattice_data

./: .gitignore  01_导师想法总结.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  index.html  pyproject.toml
.github/workflows/: ci.yml
configs/: source_registry.json
docs/: README.md  demo-showcase.html  engines.md  overview.md  source-catalog.md  training.md
docs/research/: 02_research_proposal.md  03_第二方向_实施路线与现有工作对比.md  04_phase1_真实数据来源全景调研.md  README.md
examples/materials/: README.md
examples/runtime/: README.md
examples/training/: README.md
figures/: phase1-phase2-roadmap.md  phase1-phase2-roadmap.mmd
src/lattice/: __init__.py  __main__.py  cli.py  models.py  utils.py
src/lattice/compiler/: __init__.py  pipeline.py  quality.py  transforms.py
src/lattice/engines/: __init__.py  flink.py  local.py  pandas.py  runner.py  shared.py  spark.py
src/lattice/ingest/: __init__.py  html_adapter.py  manager.py  pdf_adapter.py  structured_adapter.py  text_adapter.py
src/lattice/phase2/: __init__.py  orchestrator.py  providers.py
src/lattice/platform/: __init__.py  jobs.py  registry.py  runtime.py  server.py  specs.py  state.py  sync.py
src/lattice/silver/: __init__.py  linking.py
src/lattice/sources/: arxiv.py  crossref.py  europe_pmc.py  fetchers.py  jarvis.py  materials_cloud_archive.py  patentsview.py  wikidata.py
src/lattice/training/: __init__.py  datasets.py  loop.py  (+3 more)
tests/: test_additional_sources.py  test_engines.py  test_phase1.py  test_phase2.py  test_pipeline.py  test_platform_api.py  test_training.py
(+12 files in other folders)
