[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-data-compiler"
version = "0.1.0"
description = "An open-source domain data compiler for turning heterogeneous sources into training-ready datasets."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Huan Zhang"}
]
dependencies = []

[project.optional-dependencies]
spark = ["pyspark==3.5.5"]
flink = ["apache-flink==1.20.3"]
engines = ["pyspark==3.5.5", "apache-flink==1.20.3"]
training = ["torch>=2.5,<3"]

[project.scripts]
lattice = "lattice.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
